--- a/html/login-component.html
+++ b/html/login-component.html
@@ -1,6 +1,7 @@
 {{ define "login-component" }}
 <form method="post" action="/login">
-    <div style="display: grid;">
+    <!-- <div style="display: grid;"> -->
+    <div>
         <div>
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
