--- a/html/new-thread.html
+++ b/html/new-thread.html
@@ -6,7 +6,7 @@
             <label for="title">Title:</label>
             <input required name="title" type="text" id="Title">
             <label for="content">Instructions:</label>
-            <textarea required name="content" id="content" placeholder="Tabula rasa"></textarea>
+            <textarea required name="content" id="content" placeholder=""></textarea>
             <button type="submit">Plant</button>
         </div>
     </form>
