--- a/html/password-reset.html
+++ b/html/password-reset.html
@@ -4,7 +4,7 @@
 {{ if eq .Data.Action "/reset/generate" }}
 <form method="post" action="{{.Data.Action}}">
     <label type="text" for="username">Username:</label>
-    <input required id="username" name="username">
+    <input required id="username" name="username" type="text" />
     <div>
         <input type="submit" value="Generate payload">
     </div>
