--- a/html/login.html
+++ b/html/login.html
@@ -1,16 +1,18 @@
 {{ template "head" . }}
 <main>
 	<h1>Login</h1>
-    <p>Don't have an account yet? <a href="/register">Register</a> one. </p>
+	<p>Don't have an account yet? <a href="/register">Register</a> one. </p>
+
+	{{ if .Data.FailedAttempt }}
+		<p style="color: #DD3E77"><b>Failed login attempt:</b> incorrect password, wrong username, or a non-existent user.</p>
+	{{ else if .LoggedIn }}
+		<p> You are already logged in. Would you like to <a href="/logout">log out</a>?</p>
+	{{ end }}
+    
 	<div style="max-width: 20rem">
 		{{ template "login-component" . }}
         <p><a href="/reset">Forgot your password?</a></p>
 	</div>
-	{{ if .Data.FailedAttempt }}
-		<p><b>Failed login attempt:</b> incorrect password, wrong username, or a non-existent user.</p>
-	{{ else if .LoggedIn }}
-		<p> You are already logged in. Would you like to <a href="/logout">log out</a>?</p>
-	{{ end }}
     </p>
 </main>
 {{ template "footer" . }}
