add open graph meta tags

--- a/html/head.html
+++ b/html/head.html
@@ -21,6 +21,10 @@
         <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
+        <meta property="og:title" content="Cozy Garden — together we learn" />
+        <meta property="og:description" content="Grow ideas, participate in challenges, be creative" />
+        <meta property="og:image" content="/assets/og-image.png" />
+
          <style>
             /* reset */
             *,*::after,*::before{box-sizing:border-box}blockquote,body,dd,dl,figure,h1,h2,h3,h4,p{margin:0}ul[role='list'],ol[role='list']{list-style:none}html:focus-within{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}button,input,select,textarea{font:inherit}@media (prefers-reduced-motion: reduce){html:focus-within{scroll-behavior:auto}*,*::after,*::before{animation-duration:0.01ms !important;animation-iteration-count:1 !important;transition-duration:0.01ms !important;scroll-behavior:auto !important}}
