--- a/html/landing.html
+++ b/html/landing.html
@@ -33,6 +33,7 @@
                 background-image: url(/assets/background.png);
                 background-size: cover;
                 background-position: center;
+                display: flex;
             }
 
             body {
@@ -51,6 +52,28 @@
 
             p {
                 text-align: center;
+                font-size: 14pt;
+            }
+
+            main {
+                width: 500px;
+                max-width: calc(100% - 40px);
+                text-align: center;
+            }
+
+            main > * {
+                margin: auto;
+            }
+
+            .subtitle {
+                opacity: 0.5;
+                transform: scaleX(1.3);
+                /* font-family: monospace; */
+            }
+
+            .description {
+                margin-top: 20px;
+                /* font-family: monospace; */
             }
         </style>
     </head>
@@ -66,8 +89,10 @@
                 <path d="M191.58 69.6186C192.1 69.1566 193.201 68.4267 194.025 67.9967C195.81 67.0667 197.981 67.0226 199.982 67.8766C201.118 68.3616 202.167 69.8612 204.738 74.6792C208.39 81.5207 210.378 83.6171 213.629 84.0531C215.077 84.2471 216.189 84.0181 217.813 83.1911C220.62 81.7611 225.801 75.8177 228.325 72.1197C231.044 68.1367 233.417 67.8986 236.243 70.9201C238 72.7981 238.282 77.2541 236.825 80.1097C235.093 83.5057 232.896 85.5907 228.594 87.9247C222.015 91.4937 218.803 92.3782 213.852 91.9827C206.233 91.3742 197.84 88.2982 193.443 84.5032C191.073 82.4567 188.769 78.2446 188.785 75.9861C188.798 74.1431 190.276 70.7756 191.58 69.6186Z" fill="#FBFFD2"/>
                 <path d="M222.224 246.009C222.507 245.758 223.104 245.362 223.552 245.128C224.52 244.623 225.699 244.599 226.785 245.063C227.402 245.326 227.971 246.14 229.367 248.756C231.35 252.47 232.429 253.608 234.193 253.844C234.98 253.95 235.583 253.825 236.465 253.376C237.989 252.6 240.801 249.374 242.171 247.366C243.647 245.204 244.935 245.075 246.469 246.715C247.423 247.735 247.576 250.154 246.785 251.704C245.845 253.547 244.653 254.679 242.317 255.946C238.746 257.883 237.002 258.364 234.314 258.149C230.178 257.819 225.623 256.149 223.236 254.089C221.949 252.978 220.698 250.691 220.707 249.465C220.714 248.465 221.516 246.637 222.224 246.009Z" fill="#FBFFD2"/>
             </svg>
+
+            <p class="subtitle">WHERE IDEAS GROW</p>
             
-            <p>coming soon...</p>
+            <p class="description">A small community where we explore and grow ideas together through creative prompts and challenges</p>
                 
         </main>
     </body>
