--- a/html/community.html
+++ b/html/community.html
@@ -14,6 +14,8 @@
 			<!-- <a>
                 <img class="chladni" style="object-fit: cover; object-position: 0% 0; width: 9px; height: 18px;" src="{{ $thread.UserPostCount | chladniUrl }}" title="cultivate" /><img class="chladni" style="object-fit: cover; object-position: 100% 0; width: 9px; height: 18px;" src="{{ $thread.PostCount | chladniUrl }}" title="cultivate" />
 			</a> -->
+
+			<img class="chladni" style="width: 18px; height: 18px;" src="{{ $thread.PostCount | chladniUrl }}" title="cultivate" />
 			
 			<a href="{{ $thread.Slug }}">{{ $thread.Title }}</a>
 		</h2>
